--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.hopen.smart.activity.SplashActivity">
+    android:orientation="vertical"
+    tools:context="com.hopen.smart.activity.MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <com.hopen.smart.view.NoScrollViewPager
+        android:id="@+id/main_vp"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" />
+
+    <RadioGroup
+        android:id="@+id/group"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Hello World!" />
-</RelativeLayout>
+        android:background="@drawable/bottom_tab_bg"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <RadioButton
+            android:id="@+id/home"
+            style="@style/bottom_style"
+            android:checked="true"
+            android:drawableTop="@drawable/home_selector"
+            android:text="@string/home" />
+
+        <RadioButton
+            android:id="@+id/news"
+            style="@style/bottom_style"
+            android:drawableTop="@drawable/news_selector"
+            android:text="@string/news" />
+
+        <RadioButton
+            android:id="@+id/smart"
+            style="@style/bottom_style"
+            android:drawableTop="@drawable/smart_selector"
+            android:text="@string/smart" />
+
+        <RadioButton
+            android:id="@+id/gov"
+            style="@style/bottom_style"
+            android:drawableTop="@drawable/gov_selector"
+            android:text="@string/gov" />
+
+        <RadioButton
+            android:id="@+id/setting"
+            style="@style/bottom_style"
+            android:drawableTop="@drawable/setting_selector"
+            android:text="@string/setting" />
+    </RadioGroup>
+
+</LinearLayout>
