--- a/app/src/main/res/layout/activity_main_sliding.xml
+++ b/app/src/main/res/layout/activity_main_sliding.xml
@@ -5,12 +5,10 @@
     android:background="#280"
     android:orientation="vertical">
 
-    <TextView
-        android:text="我是侧边栏"
-        android:layout_centerInParent="true"
-        android:textSize="20sp"
-        android:textColor="#f00"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/menu_rc"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginTop="120dp"></android.support.v7.widget.RecyclerView>
 
 </RelativeLayout>
